update project. add angular